# stickynote_qt

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp  stickynote.cpp  stickynote.hpp
